  just 'n' (#1965114) (Matthieu Casanova)

- Some NPE fixed in status bar widgets when the view do not have a textArea yet
  (#1965532) (Matthieu Casanova)

- File Browser: back-arrow in filename textbox used to go up a directory,
  but was also used for going back a space in the text field.
  Use "Alt+Left" to go up a directory. (#1694133 - Alan Ezust)

- New Action: Scroll-And-Center-Caret Action. 
  Restored previous behavior of center-caret-on-screen.
  (# 1910061 - Alan Ezust)

}}}
{{{ Miscellaneous

- In the auto-indent code, use read-only "CharSequence" instances to avoid
  creating new strings (which results in a copy of the original data). This
  should reduce a little the memory usage of that code. Also change some other
  code that can avoid the user of strings (such as the word completion action).
  (Marcelo Vanzin)

- New status bar ErrorWidget added to display the 10 last exceptions that
  happened in jEdit (Matthieu Casanova)

- Toolbar and context menu can now be restored to default setting
  (Seph M. Soliman - #1961989)

- New BufferSet api. The EditPanes can now manage their own list of buffers,
  or share this list with the editpanes from the same view, and of course as
  usual share the same list between all EditPanes (the default behavior)
  (Matthieu Casanova)

}}}
{{{ Editing

- SF Patch #1947143: remove the hack to support sub names with apostrophes in
  perl mode. Hopefully no one will complain (the hack had its own problems,
  as the SF entry shows). (Marcelo Vanzin)

- PHP mode:
  - add new ruleset PHP_EXPRESSION to handle separate expressions better,
    e.g. new support for constructs like "$a->{'bar-'.substr($b,1)}"
  - handle function definitions (DEF_FUNCTION* rulesets), e.g.
    "function foo( array $bar = null )"
  - handle var-vars (e.g. $$foo)
  - stricter, consistent matching of variable names
  - other minor fixes/improvements

}}}
{{{ API Changes

- New methods were added to jEditBuffer to return CharSequence instead of